Fixed overflow styling in log list by making it apply to all console tabs.

--- a/packages/selenium-ide/src/neo/components/LogList/style.css
+++ b/packages/selenium-ide/src/neo/components/LogList/style.css
@@ -1,5 +1,4 @@
 .logs {
   color: #5B5B5B;
-  overflow-y: auto;
   width: 100%;
 }
