--- a/packages/selenium-ide/src/neo/containers/Console/style.css
+++ b/packages/selenium-ide/src/neo/containers/Console/style.css
@@ -6,4 +6,5 @@ footer.console {
   padding-top: 7px;
   padding-left: 15px;
   font-size: 12px;
+  overflow-y: auto;
 }
